[package]
name = "rust-datascience"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="lib"
path="src/lib.rs"

[markov_chain]
name="markov_chain"
path="src/markov_chain.rs"

[util]
name="util"
path="src/util.rs"

[dependencies]
csv = "1.1.6"
itertools = "0.10.5"